# swctools

./: README.md  TODO.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md  install.md  visualization.md
swctools/: __init__.py  config.py  io.py  viz.py
tests/: test_geometry.py  test_io.py  test_model.py
